Fix alignment issues with header

--- a/css/style.css
+++ b/css/style.css
@@ -38,19 +38,17 @@ a:hover {
 
 header .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     color: white;
     background-color: #1F2937;
     padding: 20px 150px;
-    gap: 50px;
 }
 
 img {
-    width: 300px;
+    width: 400px;
     height: 300px;
     flex: 0 1 auto;
-    margin-left: 0px;
 }
 
 .awesome {
@@ -66,4 +64,6 @@ img {
     color: white;
     border-radius: 20px;
     margin-top: 10px;
+    padding: 5px 20px;
 }
+
